@@ -1,3 +1,14 @@
+2011-05-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	check: document and test $(TEST_SUITE_LOG) overriding
+	* doc/automake.texi (Simple Tests using parallel-tests): Explain
+	how and why TEST_SUITE_LOG can be overridden at runtime.
+	* tests/parallel-tests-log-override-1.test: New test, check that
+	the newly documented idiom and similar usages are truly supported.
+	* tests/parallel-tests-log-override-2.test: Likewise.
+	* tests/parallel-tests-log-override-recheck.test: Likewise.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-05-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix spurious failure of txinfo21.test on FreeBSD
